# ewoms-material

./: CMakeLists.txt  README.md  config.h.cmake  dune.module  ewoms-material.pc.in
cmake/modules/: EwomsMaterialMacros.cmake
ewoms/material/: checkfluidsystem.hh  constants.hh  idealgas.hh
ewoms/material/binarycoefficients/: air_mesitylene.hh  air_xylene.hh  brine_co2.hh  fullermethod.hh  h2o_air.hh  h2o_co2.hh  h2o_mesitylene.hh  h2o_n2.hh  h2o_xylene.hh  henryiapws.hh
ewoms/material/common/: ensurefinalized.hh
ewoms/material/components/: air.hh  brine.hh  co2.hh  co2tables.inc.hh  component.hh  dnapl.hh  h2o.hh  lnapl.hh  mesitylene.hh  n2.hh  nullcomponent.hh  simpleco2.hh  simpleh2o.hh  simplehuduanh2o.hh  tabulatedcomponent.hh  unit.hh  xylene.hh
ewoms/material/constraintsolvers/: compositionfromfugacities.hh  computefromreferencephase.hh  immiscibleflash.hh  misciblemultiphasecomposition.hh  ncpflash.hh
ewoms/material/eos/: pengrobinson.hh  pengrobinsonmixture.hh  pengrobinsonparams.hh  pengrobinsonparamsmixture.hh
ewoms/material/fluidmatrixinteractions/: brookscorey.hh  brookscoreyparams.hh  ecldefaultmaterial.hh  ecldefaultmaterialparams.hh  eclepsconfig.hh  eclepsgridproperties.hh  eclepsscalingpoints.hh  eclepstwophaselaw.hh  eclepstwophaselawparams.hh  eclhysteresisconfig.hh  eclhysteresistwophaselaw.hh  eclhysteresistwophaselawparams.hh  eclmateriallawmanager.hh  eclmultiplexermaterial.hh  eclmultiplexermaterialparams.hh  eclstone1material.hh  efftoabslaw.hh  (+25 more)
tests/: checkcomponent.hh  test_blackoilfluidstate.cc  test_co2brinepvt.cc  test_components.cc  test_eclblackoilfluidsystem.cc  test_eclblackoilpvt.cc  test_eclmateriallawmanager.cc  test_fluidmatrixinteractions.cc  test_fluidsystems.cc  test_immiscibleflash.cc  test_ncpflash.cc  test_pengrobinson.cc  test_tabulation.cc
(+75 files in other folders)
